# hello_qt

./: README.md
qttool1/: main_window.py  main_window.ui  pyproject.toml  ui2py.bat  ui_main_window.py
qttool1/fast_del/: __init__.py  fast_del_window.ui  fast_del_wnd.py  ui_fast_del_window.py
qttool1/format_text/: __init__.py  format_text_window.ui  tools_format_text.py  ui_format_text_window.py
testqt1/: build.bat  env-active.bat  format_text_window.ui  hell_tree.py  hello_dlg.py  hello_expenses_tool.py  hello_mainwindow_ui.py  hello_table.py  hello_world.py  hello_world_quick.py  icons.qrc  init.txt  mainwindow.ui  pyproject.toml  rc_icons.py  requirements.txt  tools_format_text.py  ui2py.bat  ui_format_text_window.py  ui_mainwindow.py
